syntax = "proto3";
package vm_runtime;
//option go_package = "./proto";

service VmRuntime {
  rpc Create(CreateRequest) returns (CreateResponse);
  rpc ExecuteOperator(ExecuteRequest) returns (ExecuteResponse);
}

message CreateRequest {
  uint64 projectID = 1;
  string content = 2;		 // out
  repeated string expParams = 3; // method, proving.key, verification.key
}

message CreateResponse {
}
// TOOD: also add expParams to Execute??? could be used for for proof method and who knows what
message ExecuteRequest {
  uint64 projectID = 1;
  uint64 taskID = 2;
  string clientID = 3;
  string sequencerSignature = 4;
  repeated string datas = 5;	// inputs
}

message ExecuteResponse {
  bytes result = 1;
}
